--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@material/theme": "^13.0.0",
     "@material/typography": "^13.0.0",
+    "@sveltejs/adapter-node": "^1.0.0-next.68",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
