--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,22 +13,22 @@
   "devDependencies": {
     "@material/theme": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@sveltejs/adapter-node": "^1.0.0-next.68",
-    "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "carbon-components-svelte": "^0.56.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.28",
+    "@sveltejs/kit": "^1.0.0-next.278",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "carbon-components-svelte": "^0.58.3",
     "carbon-icons-svelte": "^10.44.4",
     "carbon-pictograms-svelte": "^12.0.2",
     "carbon-preprocess-svelte": "^0.6.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-svelte3": "^3.4.0",
-    "prettier": "~2.5.1",
+    "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "svelte": "^3.46.3",
-    "svelte-check": "^2.3.0",
-    "svelte-preprocess": "^4.10.2",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.5",
+    "svelte-preprocess": "^4.10.3",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
