Set eyesuite image name for publication Added LICENSE and package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
   server:
     container_name: eyesuite
     build: .
+    image: hardcake/eyesuite:latest
     ports:
       - "8080:8080"
     depends_on:
